examples/test/testpolicy1143.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1143
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value37
          key13: value40
          key49: value2
      podSelector:
        matchLabels:
          key19: value28
          key18: value43
          key48: value13
